devparamtable